refs #6731 font size was too big. Fixed spacing in slide tabs content in db as well.

--- a/wp-content/themes/u-design-child/style.css
+++ b/wp-content/themes/u-design-child/style.css
@@ -1870,7 +1870,7 @@ ul.prepbefore {
     margin:0;
     padding:0;
     margin-top:0px;
-    font-size: 30px;
+    /*font-size: 30px;*/
     vertical-align: middle;
 }
 
@@ -1888,7 +1888,7 @@ ul.prepduring {
     margin:0;
     padding:0;
     margin-top:0px;
-    font-size: 30px;
+    /*font-size: 30px;*/
     vertical-align: middle;
 }
 
@@ -1905,7 +1905,7 @@ ul.prepafter {
     margin:0;
     padding:0;
     margin-top:0px;
-    font-size: 30px;
+    /*font-size: 30px;*/
     vertical-align: middle;
 }
 
@@ -1922,7 +1922,7 @@ ul.host {
     margin:0;
     padding:0;
     margin-top:0px;
-    font-size: 30px;
+    /*font-size: 30px;*/
     vertical-align: middle;
 }
 
